--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,29 +29,29 @@ services:
       - STOREFRONT_URL=http://localhost:3000/
       - DASHBOARD_URL=http://localhost:9000/
 
-  storefront:
-    build:
-      context: ./saleor-storefront
-      dockerfile: ./Dockerfile
-    ports:
-      - 3000:3000
-    restart: unless-stopped
-    volumes:
-      - ./saleor-storefront/:/app:cached
-      - /app/node_modules/
-    command: npm start -- --host 0.0.0.0
+  # storefront:
+  #   build:
+  #     context: ./saleor-storefront
+  #     dockerfile: ./Dockerfile
+  #   ports:
+  #     - 3000:3000
+  #   restart: unless-stopped
+  #   volumes:
+  #     - ./saleor-storefront/:/app:cached
+  #     - /app/node_modules/
+  #   command: npm start -- --host 0.0.0.0
 
-  dashboard:
-    build:
-      context: ./saleor-dashboard
-      dockerfile: ./Dockerfile
-    ports:
-      - 9000:9000
-    restart: unless-stopped
-    volumes:
-      - ./saleor-dashboard/:/app:cached
-      - /app/node_modules/
-    command: npm start -- --host 0.0.0.0
+  # dashboard:
+  #   build:
+  #     context: ./saleor-dashboard
+  #     dockerfile: ./Dockerfile
+  #   ports:
+  #     - 9000:9000
+  #   restart: unless-stopped
+  #   volumes:
+  #     - ./saleor-dashboard/:/app:cached
+  #     - /app/node_modules/
+  #   command: npm start -- --host 0.0.0.0
 
   db:
     image: library/postgres:11.1-alpine
