--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,10 +137,8 @@ volumes:
     driver: local
   saleor-redis:
     driver: local
-  saleor-media:
-    driver: local
-  saleor-traefik:
-    driver: local
+  saleor-media: {}
+  saleor-traefik: {}
 
 networks:
   saleor-backend-tier:
