Test deploy without SSL

--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -6,19 +6,19 @@ entryPoints:
     # http
     address: ":80"
 
-  web-secure:
-    # https
-    address: ":443"
+  # web-secure:
+  #   # https
+  #   address: ":443"
 
-certificatesResolvers:
-  letsencrypt:
-    # https://docs.traefik.io/master/https/acme/#lets-encrypt
-    acme:
-      email: "cheewoei@redsquare.software"
-      storage: /etc/traefik/acme/acme.json
-      # https://docs.traefik.io/master/https/acme/#httpchallenge
-      httpChallenge:
-        entryPoint: web
+# certificatesResolvers:
+#   letsencrypt:
+#     # https://docs.traefik.io/master/https/acme/#lets-encrypt
+#     acme:
+#       email: "cheewoei@redsquare.software"
+#       storage: /etc/traefik/acme/acme.json
+#       # https://docs.traefik.io/master/https/acme/#httpchallenge
+#       httpChallenge:
+#         entryPoint: web
 
 http:
   routers:
@@ -31,16 +31,16 @@ http:
         - csrf
       service: api
 
-    web-secure-router:
-      rule: "Host(`saleor.mywheels.com.my`)"
-      entryPoints:
-        - web-secure
-      middlewares:
-        - csrf
-      service: api
-      tls:
-        # https://docs.traefik.io/master/routing/routers/#certresolver
-        certResolver: letsencrypt
+    # web-secure-router:
+    #   rule: "Host(`saleor.mywheels.com.my`)"
+    #   entryPoints:
+    #     - web-secure
+    #   middlewares:
+    #     - csrf
+    #   service: api
+    #   tls:
+    #     # https://docs.traefik.io/master/routing/routers/#certresolver
+    #     certResolver: letsencrypt
 
   middlewares:
     # redirect:
