Comment out map port 800, might be clashing

--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -43,11 +43,11 @@ http:
     #     certResolver: letsencrypt
 
   middlewares:
-    # redirect:
-    #   # https://docs.traefik.io/master/middlewares/redirectscheme/
-    #   redirectScheme:
-    #     scheme: https
-    #     permanent: true
+    redirect:
+      # https://docs.traefik.io/master/middlewares/redirectscheme/
+      redirectScheme:
+        scheme: https
+        permanent: true
     csrf:
       # https://docs.traefik.io/master/middlewares/headers/#hostsproxyheaders
       # https://docs.djangoproject.com/en/dev/ref/csrf/#ajax
