Map 0:8000 in traefik

--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -58,7 +58,7 @@ http:
     api:
       loadBalancer:
         servers:
-          - url: http://api:8000
+          - url: http://0.0.0.0:8000
 
 providers:
   # https://docs.traefik.io/master/providers/file/
