Update domain names

--- a/common.env
+++ b/common.env
@@ -1,6 +1,8 @@
-DATABASE_URL=postgres://saleor:saleor@db/saleor
-DEFAULT_FROM_EMAIL=noreply@example.com
+DATABASE_URL=postgres://saleor:password@db/saleor
+DEFAULT_FROM_EMAIL=noreply@saleor.mywheels.com.my
 CELERY_BROKER_URL=redis://redis:6379/1
-SECRET_KEY=changeme
-EMAIL_URL=smtp://mailhog:1025
-ALLOWED_HOSTS=saleor.mywheels.com.my
+JAEGER_AGENT_HOST=jaeger
+SECRET_KEY=secret_key
+API_URI=https://saleor-api.saleor.mywheels.com.my/graphql/
+ALLOWED_HOSTS=saleor-api.saleor.mywheels.com.my,saleor-mail.saleor.mywheels.com.my,saleor-store.saleor.mywheels.com.my,saleor-admin.saleor.mywheels.com.my,saleor-jaeger.saleor.mywheels.com.my
+ALLOWED_CLIENT_HOSTS=saleor-api.saleor.mywheels.com.my,saleor-mail.saleor.mywheels.com.my,saleor-store.saleor.mywheels.com.my,saleor-admin.saleor.mywheels.com.my,saleor-jaeger.saleor.mywheels.com.my
