--- a/common.env
+++ b/common.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://saleor:password@db/saleor
+DATABASE_URL=postgres://saleor:saleor@db/saleor
 DEFAULT_FROM_EMAIL=noreply@saleor.mywheels.com.my
 CELERY_BROKER_URL=redis://redis:6379/1
 JAEGER_AGENT_HOST=jaeger
