Add allowed hosts

--- a/common.env
+++ b/common.env
@@ -4,5 +4,5 @@ CELERY_BROKER_URL=redis://redis:6379/1
 JAEGER_AGENT_HOST=jaeger
 SECRET_KEY=secret_key
 API_URI=https://saleor-api.saleor.mywheels.com.my/graphql/
-ALLOWED_HOSTS=saleor-api.saleor.mywheels.com.my,saleor-mail.saleor.mywheels.com.my,saleor-store.saleor.mywheels.com.my,saleor-admin.saleor.mywheels.com.my,saleor-jaeger.saleor.mywheels.com.my
-ALLOWED_CLIENT_HOSTS=saleor-api.saleor.mywheels.com.my,saleor-mail.saleor.mywheels.com.my,saleor-store.saleor.mywheels.com.my,saleor-admin.saleor.mywheels.com.my,saleor-jaeger.saleor.mywheels.com.my
+ALLOWED_HOSTS=saleor-api.saleor.mywheels.com.my,saleor-mail.saleor.mywheels.com.my,saleor-store.saleor.mywheels.com.my,saleor-admin.saleor.mywheels.com.my,saleor-jaeger.saleor.mywheels.com.my,saleor.mywheels.com.my
+ALLOWED_CLIENT_HOSTS=saleor-api.saleor.mywheels.com.my,saleor-mail.saleor.mywheels.com.my,saleor-store.saleor.mywheels.com.my,saleor-admin.saleor.mywheels.com.my,saleor-jaeger.saleor.mywheels.com.my,saleor.mywheels.com.my
