Update domain name

--- a/common.env
+++ b/common.env
@@ -3,6 +3,6 @@ DEFAULT_FROM_EMAIL=noreply@saleor.mywheels.com.my
 CELERY_BROKER_URL=redis://redis:6379/1
 JAEGER_AGENT_HOST=jaeger
 SECRET_KEY=secret_key
-API_URI=https://saleor-api.saleor.mywheels.com.my/graphql/
+API_URI=https://saleor.mywheels.com.my/graphql/
 ALLOWED_HOSTS=saleor-api.saleor.mywheels.com.my,saleor-mail.saleor.mywheels.com.my,saleor-store.saleor.mywheels.com.my,saleor-admin.saleor.mywheels.com.my,saleor-jaeger.saleor.mywheels.com.my,saleor.mywheels.com.my
 ALLOWED_CLIENT_HOSTS=saleor-api.saleor.mywheels.com.my,saleor-mail.saleor.mywheels.com.my,saleor-store.saleor.mywheels.com.my,saleor-admin.saleor.mywheels.com.my,saleor-jaeger.saleor.mywheels.com.my,saleor.mywheels.com.my
