--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,7 +5,7 @@ services:
     labels:
       traefik.enable: true
       traefik.http.routers.saleor-api.entrypoints: https
-      traefik.http.routers.saleor-api.rule: Host(`saleor-api.saleor.mywheels.com.my`)
+      traefik.http.routers.saleor-api.rule: Host(`saleor.mywheels.com.my`)
       traefik.http.routers.saleor-api.service: saleor-api
       traefik.http.services.saleor-api.loadbalancer.server.port: 80
       traefik.docker.network: web
