--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - ./saleor/tests/:/app/tests
       # shared volume between worker and api for media
       - saleor-media:/app/media
-    command: python manage.py runserver 0.0.0.0:80
+    command: gunicorn --bind :80 --workers 4 --worker-class uvicorn.workers.UvicornWorker saleor.asgi:application
     env_file: common.env
     environment:
       - JAEGER_AGENT_HOST=jaeger
