--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: '2.1'
+version: "2"
 
 services:
-
   api:
     ports:
       - 8000:8000
@@ -9,7 +8,7 @@ services:
       context: ./saleor
       dockerfile: ./Dockerfile
       args:
-        STATIC_URL: '/static/'
+        STATIC_URL: "/static/"
     restart: unless-stopped
     networks:
       - saleor-backend-tier
@@ -27,8 +26,8 @@ services:
     env_file: common.env
     environment:
       - JAEGER_AGENT_HOST=jaeger
-      # - STOREFRONT_URL=https://saleor-store.domain.com/
-      # - DASHBOARD_URL=https://saleor-admin.domain.com/
+      - STOREFRONT_URL=http://localhost:3000/
+      - DASHBOARD_URL=http://localhost:9000/
 
   # storefront:
   #   build:
@@ -40,10 +39,7 @@ services:
   #   volumes:
   #     - ./saleor-storefront/:/app:cached
   #     - /app/node_modules/
-  #   environment:
-  #     - API_URI=https://saleor-api.domain.com/graphql/
-  #     - ALLOWED_CLIENT_HOSTS=domain.com
-  #     - ALLOWED_HOSTS=domain.com
+  #   command: npm start -- --host 0.0.0.0
 
   # dashboard:
   #   build:
@@ -55,10 +51,7 @@ services:
   #   volumes:
   #     - ./saleor-dashboard/:/app:cached
   #     - /app/node_modules/
-  #   environment:
-  #     - API_URI=https://saleor-api.domain.com/graphql/
-  #     - ALLOWED_CLIENT_HOSTS=domain.com
-  #     - ALLOWED_HOSTS=domain.com
+  #   command: npm start -- --host 0.0.0.0
 
   db:
     image: library/postgres:11.1-alpine
@@ -71,7 +64,7 @@ services:
       - saleor-db:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=saleor
-      - POSTGRES_PASSWORD=password
+      - POSTGRES_PASSWORD=saleor
 
   redis:
     image: library/redis:5.0-alpine
@@ -88,8 +81,8 @@ services:
       context: ./saleor
       dockerfile: ./Dockerfile
       args:
-        STATIC_URL: '/static/'
-    command: celery -A saleor --app=saleor.celeryconf:app worker --loglevel=info
+        STATIC_URL: "/static/"
+    command: celery -A saleor --app=saleor.celeryconf:app worker --loglevel=info -B
     restart: unless-stopped
     networks:
       - saleor-backend-tier
@@ -102,8 +95,6 @@ services:
       - ./saleor/templates/:/app/templates:Z,cached
       # shared volume between worker and api for media
       - saleor-media:/app/media
-    environment:
-      - EMAIL_URL=smtp://mailhog:1025
 
   jaeger:
     image: jaegertracing/all-in-one
@@ -128,12 +119,25 @@ services:
     networks:
       - saleor-backend-tier
 
+  traefik:
+    build:
+      context: ./traefik
+      dockerfile: ./Dockerfile
+    depends_on:
+      - api
+    volumes:
+      - saleor-traefik:/etc/traefik/acme
+    ports:
+      - "0.0.0.0:80:80"
+      - "0.0.0.0:443:443"
+
 volumes:
   saleor-db:
     driver: local
   saleor-redis:
     driver: local
-  saleor-media:
+  saleor-media: {}
+  saleor-traefik: {}
 
 networks:
   saleor-backend-tier:
