--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -130,6 +130,8 @@ services:
     ports:
       - "0.0.0.0:80:80"
       - "0.0.0.0:443:443"
+    networks:
+      - saleor-backend-tier
 
 volumes:
   saleor-db:
