--- a/common.env
+++ b/common.env
@@ -4,3 +4,4 @@ CELERY_BROKER_URL=redis://redis:6379/1
 SECRET_KEY=changeme
 EMAIL_URL=smtp://mailhog:1025
 ALLOWED_HOSTS=saleor.mywheels.com.my,dashboard.saleor.mywheels.com.my
+ALLOWED_CLIENT_HOSTS=saleor.mywheels.com.my,dashboard.saleor.mywheels.com.my
