Add port to db container docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,8 @@ services:
 
   db:
     image: library/postgres:11.1-alpine
+    ports:
+      - "5432:5432"
     restart: unless-stopped
     networks:
       - saleor-backend-tier
