Add '*' to allowed_hosts temporarily

--- a/common.env
+++ b/common.env
@@ -3,4 +3,4 @@ DEFAULT_FROM_EMAIL=noreply@example.com
 CELERY_BROKER_URL=redis://redis:6379/1
 SECRET_KEY=changeme
 EMAIL_URL=smtp://mailhog:1025
-ALLOWED_HOSTS=.saleor.mywheels.com.my,54.179.122.218
+ALLOWED_HOSTS=.saleor.mywheels.com.my,54.179.122.218,localhost:9000,*
