Remove dashboard container from local.yml

--- a/local.yml
+++ b/local.yml
@@ -40,17 +40,17 @@ services:
   #     - /app/node_modules/
   #   command: npm start
 
-  dashboard:
-    build:
-      context: ./saleor-dashboard
-      dockerfile: ./Dockerfile.dev
-    ports:
-      - 9000:9000
-    restart: unless-stopped
-    volumes:
-      - ./saleor-dashboard/:/app:cached
-      - /app/node_modules/
-    command: npm start -- --host 0.0.0.0
+  # dashboard:
+  #   build:
+  #     context: ./saleor-dashboard
+  #     dockerfile: ./Dockerfile.dev
+  #   ports:
+  #     - 9000:9000
+  #   restart: unless-stopped
+  #   volumes:
+  #     - ./saleor-dashboard/:/app:cached
+  #     - /app/node_modules/
+  #   command: npm start -- --host 0.0.0.0
 
   db:
     image: library/postgres:11.1-alpine
