Break down docker-compose.yml into production.yml & staging.yml

--- a/staging.yml
+++ b/staging.yml
@@ -121,7 +121,7 @@ services:
 
   traefik:
     build:
-      context: ./traefik
+      context: ./traefik/staging
       dockerfile: ./Dockerfile
     depends_on:
       - api
