adapt new staging to production v2

--- a/production.yml
+++ b/production.yml
@@ -119,6 +119,19 @@ services:
     networks:
       - saleor-backend-tier
 
+  meilisearch:
+    build:
+      context: .
+      dockerfile: ./compose/production/meilisearch/Dockerfile
+    image: cp_car_world_production_meilisearch
+    container_name: meilisearch
+    # command: ./meilisearch --master-key=masterKey --no-analytics=true
+    command: ./meilisearch --no-analytics=true
+    volumes:
+      - production_meilisearch:/data.ms
+    networks:
+      - saleor-backend-tier
+
   traefik:
     build:
       context: ./traefik/production
@@ -131,6 +144,7 @@ services:
     ports:
       - "0.0.0.0:80:80"
       - "0.0.0.0:443:443"
+      - "0.0.0.0:7700:7700"
     networks:
       - saleor-backend-tier
 
@@ -141,6 +155,7 @@ volumes:
     driver: local
   saleor-media: {}
   saleor-traefik: {}
+  production_meilisearch: {}
 
 networks:
   saleor-backend-tier:
